Fixed alignment between Accenture and High performance to be in same line when resizing. Changed Intro text

--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -77,7 +77,7 @@ a.anchor {
   }
   .navbar-brand {
     position: absolute;
-    left: 50px;
+    left: 35px;
     top: 8px;
 
     color: $white;
@@ -85,6 +85,7 @@ a.anchor {
     background-size: 100%;
     width: 135px;
     height: 56px;
+    margin-left: 0px !important;
   }
   .navbar-nav {
     margin-left: 165px;
